<resources>
    <string name="app_name">The Avengers</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="log_in">Log In</string>
    <string name="preferences_file_name">Avengers Preferences</string>
</resources>